--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "dynamic-content-section",
+  "version": "1.0.0",
   "description": "",
   "keywords": [
     "jquery",
     "ajax"
   ],
-
   "author": "Marcin Dobroszek <marcin.dobroszek@gmail.com>",
   "repository": {
     "type": "git",
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "git://github.com/cichy380/Dynamic-Content-Section/issues"
   },
-  "main": "index.js",
+  "main": "dist/jquery.ajaxContent.min.js",
   "scripts": {
     "webpack": "webpack --config webpack.config.js",
     "build": "webpack -p",
